--- a/css/main-960px.css
+++ b/css/main-960px.css
@@ -7,9 +7,4 @@
     flex-direction: column;
     height: auto;
   }
-
-  .content-wrapper,
-  .intro-wrapper {
-    margin-bottom: 0;
-  }
 }
