--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,20 @@ body {
   overflow: hidden;
 }
 
-#background-image-blurred {
+.background-wrapper {
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
   position: absolute;
+}
+
+#background-image-blurred {
   height: 100vh;
   width: 100vw;
   filter: blur(2px);
   -webkit-filter: blur(2px);
   object-fit: cover;
-  z-index: -1;
   transform: scale(1.01);
 }
 
@@ -24,4 +30,24 @@ body {
   padding: 16px;
   height: 100vh;
   overflow: hidden;
+}
+
+/*Custom Scrollbar*/
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
